# gw1-demo-aiweb-app

./: .gitignore  README.md  pyproject.toml
src/: README.md  app.py
