[project]
name = "demo-gw1-aiwebapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "huggingface-hub>=0.36.0",
    "streamlit>=1.51.0",
    "streamlit-option-menu>=0.4.0",
    "streamlit-toggle-diy>=1.1.7",
    "streamlit-toggle-switch>=1.0.2",
    "torch==2.5.1",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" },
]
torchvision = [
    { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
